internal/rgo/testdata/bool_slice_out_named_0/golden.txtar
-- DESCRIPTION --
Package: bool_slice_out_named_0
Title: What the Package Does (One Line, Title Case)
Version: 
Authors@R:
    person(given   = "First",
           family  = "Last",
           role    = c("aut", "cre"),
           email   = "first.last@example.com",
           comment = c(ORCID = "YOUR-ORCID-ID"))
Description: What the package does (one paragraph).
License: See LICENSE directory
Encoding: UTF-8
LazyData: true
-- NAMESPACE --
# Code generated by rgnonomic/rgo; DO NOT EDIT.

useDynLib(bool_slice_out_named_0)
export(test_0)
-- R/bool_slice_out_named_0.R --
# Code generated by rgnonomic/rgo; DO NOT EDIT.

#' @useDynLib bool_slice_out_named_0

#' Test0
#'
#' Test0 does things with [] and returns [[]bool].
#' 
#' @return A logical vector, res0
#' @seelso <https://godoc.org/bool_slice_out_named_0#Test0>
#' @export
test_0 <- function() {
	.Call("test_0", PACKAGE = "bool_slice_out_named_0")
}
-- src/Makevars --
# Code generated by rgnonomic/rgo; DO NOT EDIT.

.PHONY: all

CGO_CFLAGS = "$(ALL_CPPFLAGS)"
CGO_LDFLAGS = "$(PKG_LIBS) $(SHLIB_LIBADD) $(LIBR)"

all: go docs

docs:

go:
	rm -f *.h
	CGO_CFLAGS=$(CGO_CFLAGS) CGO_LDFLAGS=$(CGO_LDFLAGS) go build -o $(SHLIB) -buildmode=c-shared ./rgo
-- src/rgo/bool_slice_out_named_0.c --
// Code generated by rgnonomic/rgo; DO NOT EDIT.

#include "_cgo_export.h"

void R_warning(char* s) {
	warning(s);
}

void R_error(char* s) {
	error(s);
}

// TODO(kortschak): Only emit these when needed:
// Needed for unpacking SEXP character.
GoString R_gostring(SEXP x) {
	SEXP _s = STRING_ELT(x, 0);
	GoString s = {(char*)CHAR(_s), STDVEC_LENGTH(_s)};
	return s;
}

// Needed for getting list elements by name.
int getListElementIndex(SEXP list, const char *str) {
	int index = -1;
	SEXP names = getAttrib(list, R_NamesSymbol);
	for (int i = 0; i < length(list); i++) {
		if (strcmp(CHAR(STRING_ELT(names, i)), str) == 0) {
			index = i;
			break;
		}
	}
	return index;
}

SEXP test_0() {
	return Wrapped_Test0();
}
-- src/rgo/bool_slice_out_named_0.go --
// Code generated by rgnonomic/rgo; DO NOT EDIT.

package main

/*
#define USE_RINTERNALS
#include <R.h>
#include <Rinternals.h>
extern void R_error(char *s);

// TODO(kortschak): Only emit these when needed.
extern Rboolean Rf_isNull(SEXP s);
extern _GoString_ R_gostring(SEXP x);
*/
import "C"

import (
	"fmt"
	"unsafe"

	"bool_slice_out_named_0"
)


//export Wrapped_Test0
func Wrapped_Test0() C.SEXP {
	defer func() {
		r := recover()
		if r != nil {
			err := C.CString(fmt.Sprint(r))
			C.R_error(err)
			C.free(unsafe.Pointer(err))
		}
	}()

	_r0 := bool_slice_out_named_0.Test0()
	return packSEXP_Test0(_r0)
}

func packSEXP_Test0(res0 []bool) C.SEXP {
	return packSEXP_types_Slice___bool(res0)
}

func packSEXP_types_Basic_bool(p bool) C.SEXP {
	b := C.int(0)
	if p {
		b = 1
	}
	return C.ScalarBool(b)
}

func packSEXP_types_Slice___bool(p []bool) C.SEXP {
	r := C.Rf_allocVector(C.LGLSXP, C.R_xlen_t(len(p)))
	C.Rf_protect(r)
	s := (*[140737488355328]bool)(unsafe.Pointer(C.LOGICAL(r)))[:len(p):len(p)]
	for i, v := range p {
		if v {
			s[i] = 1
		} else {
			s[i] = 0
		}
	}
	C.Rf_unprotect(1)
	return r
}

func main() {}
